~ initial UI commit

--- a/utrace/Base.lproj/Main.storyboard
+++ b/utrace/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--reperio-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,83 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="domain.tld" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xhO-Cu-SLp">
+                                <rect key="frame" x="0.0" y="132" width="600" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="1" green="0.29803921570000003" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="obX-dc-esY"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="0.29803921570000003" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6UA-af-UYY">
+                                <rect key="frame" x="0.0" y="202" width="600" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="5gm-Wn-HPz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Search">
+                                    <color key="titleColor" red="1" green="0.29803921570000003" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a domain or IP-Address to lookup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CUt-TX-Hfs">
+                                <rect key="frame" x="20" y="106" width="560" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="reperio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfh-lE-Wa8">
+                                <rect key="frame" x="20" y="28" width="560" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Qb2-jA-yGZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lookup results" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHS-Mx-bbt">
+                                <rect key="frame" x="20" y="274" width="560" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIy-1K-RGV">
+                                <rect key="frame" x="0.0" y="300" width="600" height="300"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.29803921568627451" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xhO-Cu-SLp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5Ds-4j-SzB"/>
+                            <constraint firstAttribute="trailing" secondItem="xhO-Cu-SLp" secondAttribute="trailing" id="5z0-gB-GEr"/>
+                            <constraint firstItem="xhO-Cu-SLp" firstAttribute="top" secondItem="CUt-TX-Hfs" secondAttribute="bottom" constant="8" id="83R-br-IyM"/>
+                            <constraint firstItem="rIy-1K-RGV" firstAttribute="top" secondItem="AHS-Mx-bbt" secondAttribute="bottom" constant="8" id="8go-eY-YKC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rIy-1K-RGV" secondAttribute="bottom" id="BiO-OY-S5e"/>
+                            <constraint firstItem="rIy-1K-RGV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CnT-Oi-msv"/>
+                            <constraint firstItem="CUt-TX-Hfs" firstAttribute="top" secondItem="tfh-lE-Wa8" secondAttribute="bottom" constant="28" id="Fdb-Tl-Cdx"/>
+                            <constraint firstItem="tfh-lE-Wa8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HZz-mZ-Kos"/>
+                            <constraint firstItem="CUt-TX-Hfs" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="I5i-mw-tR5"/>
+                            <constraint firstItem="tfh-lE-Wa8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Pl0-cB-8nm"/>
+                            <constraint firstAttribute="trailing" secondItem="AHS-Mx-bbt" secondAttribute="trailing" constant="20" id="QVT-gW-GbV"/>
+                            <constraint firstItem="6UA-af-UYY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="V0d-KU-NQy"/>
+                            <constraint firstItem="CUt-TX-Hfs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Wwz-A6-Fx0"/>
+                            <constraint firstAttribute="trailing" secondItem="rIy-1K-RGV" secondAttribute="trailing" id="ZYO-4v-NWd"/>
+                            <constraint firstItem="AHS-Mx-bbt" firstAttribute="top" secondItem="6UA-af-UYY" secondAttribute="bottom" constant="22" id="gYD-ja-Pmk"/>
+                            <constraint firstItem="AHS-Mx-bbt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="hf7-GY-Fkn"/>
+                            <constraint firstItem="xhO-Cu-SLp" firstAttribute="top" secondItem="CUt-TX-Hfs" secondAttribute="bottom" constant="8" id="hqo-tK-vY6"/>
+                            <constraint firstItem="tfh-lE-Wa8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="tHw-97-GTt"/>
+                            <constraint firstAttribute="trailing" secondItem="6UA-af-UYY" secondAttribute="trailing" id="yFt-HI-fWr"/>
+                            <constraint firstItem="6UA-af-UYY" firstAttribute="top" secondItem="xhO-Cu-SLp" secondAttribute="bottom" constant="20" id="zbt-pn-s8J"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="reperio" id="a4Q-D1-g7X"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1370" y="486"/>
         </scene>
     </scenes>
 </document>
