+ Added method to resign keyboard

--- a/utrace/Base.lproj/Main.storyboard
+++ b/utrace/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                                 <color key="textColor" red="1" green="0.29803921570000003" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="search"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6UA-af-UYY">
                                 <rect key="frame" x="0.0" y="202" width="600" height="50"/>
